appId: host.exp.Exponent
---
- launchApp
- tapOn: "Start Guided Setup"
- tapOn: "Settings"
- assertVisible: "Flash"
